--- a/src/styles/feed.module.css
+++ b/src/styles/feed.module.css
@@ -3,7 +3,7 @@
     height: fit-content;
     display: flex;
     flex-direction: column;
-    gap: 2rem;
+    gap: 4rem;
     position: relative;
 }
 
